# hakai-reference-stations

./: .gitignore  README.md  TODOS  makefile  pyproject.toml
.github/workflows/: build.yml
docs/: index.html  stations.csv
hakai_reference_stations/: load_from_database.py  map.py
hakai_reference_stations/templates/: index.html  table.html
