[tool.poetry]
name = "hakai-reference-stations"
version = "0.1.0"
description = ""
authors = ["Jessy Barrette <30420025+JessyBarrette@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hakai_reference_stations"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
hakai-api = "^1.5.1"
click = "^8.1.7"
pandas = "^2.2.1"
ruff = "^0.3.5"
loguru = "^0.7.2"
folium = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
